# airflow-demo

./: .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_TEST_HARNESS_SUMMARY.md  Claude.md  Makefile  QUICK_REFERENCE.md  README.md  TESTING_QUICKSTART.md  pyproject.toml
.github/workflows/: test.yml
config/: .env.example
dags/examples/: example_bedrock_claude.py
docs/: TDD_WORKFLOW_GUIDE.md  TESTING_STRATEGY.md
plugins/hooks/: bedrock_hook.py
plugins/operators/: bedrock_operator.py
src/airflow_aws/config/: settings.py
src/airflow_aws/services/: bedrock_service.py  s3_service.py  secrets_service.py
src/airflow_demo/services/: bedrock_service.py  s3_service.py
tests/: README.md  conftest.py
tests/e2e/: test_document_analysis_dag.py  test_hello_claude_dag.py
tests/fixtures/dags/: hello_claude_dag.py  sample_dag.py
tests/integration/aws/: test_s3_bedrock_integration.py
tests/smoke/: test_basic_functionality.py
tests/unit/services/: test_bedrock_service.py  test_s3_service.py
tests/utils/: test_helpers.py
